--- a/Selenium_Jenkins/pom.xml
+++ b/Selenium_Jenkins/pom.xml
@@ -35,6 +35,9 @@
 <goals>
 <goal>java</goal>
 </goals>
+<configuration>
+<mainClass>com.kiot.KeyDownUp</mainClass>
+</configuration>
 </execution>
 </executions>
 </plugin>
